fixed rules image alignment

--- a/src/css/Dialog.css
+++ b/src/css/Dialog.css
@@ -52,6 +52,7 @@
     margin: 0;
     display: grid;
     justify-items: center;
+    justify-content: center;
     border-radius: 0;
   }
   #dialog-header {
